--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.5.0",
+    "date-fns": "^2.25.0",
     "html-loader": "^3.0.0",
     "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.1",
